code-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: code-server
  name: code-server
spec:
  ports:
  - port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: code-server
  type: ClusterIP
status:
  loadBalancer: {}
